test/rbkt/Queries/zorba/syntax-error/syntax-error-01.spec
Error: XPST0003
Error: XQST0090
